# Corsair_SnowflakeProject

./: README.md  SNOWFLAKE_MCP_SETUP.md  pyproject.toml
src/corsaiflow/: main.py
src/corsaiflow/crews/data_routing_crew/: data_routing_crew.py
src/corsaiflow/crews/data_routing_crew/config/: agents.yaml  tasks.yaml
src/corsaiflow/tools/: __init__.py  data_repository_tool.py  snowflake_mcp_tool.py
