[project]
name = "corsaiflow"
version = "0.1.0"
description = "corsaiFlow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0",
    "requests>=2.31.0"
]

[project.scripts]
kickoff = "corsaiflow.main:kickoff"
run_crew = "corsaiflow.main:kickoff"
plot = "corsaiflow.main:plot"
run_with_trigger = "corsaiflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
